--- a/library.properties
+++ b/library.properties
@@ -1,10 +1,10 @@
-name=DFRobot_ESP_PH_BY_GREENPONIK
-version=1.1.2
-author=GREENPONIK
-maintainer=Greenponik <contact@greenponik.com>
-sentence=Update from DFROBOT library for ESP32
-paragraph=Update from DFROBOT library for ESP32
+name=DFRobot_ESP_PH
+version=1.0.0
+author=YusakuNakajima
+maintainer=YusakuNakajima <andotoecno@gmail.com>
+sentence=Update from DFROBOT library for ESP32 compatibility
+paragraph=Update from DFROBOT library for ESP32 compatibility
 category=Signal Input/Output
-url=https://github.com/GreenPonik/DFRobot_ESP_PH_BY_GREENPONIK.git
+url=https://github.com/andotoecno/DFRobot_ESP_PH.git
 architectures=*
 includes=DFRobot_ESP_PH.h
